--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,8 +1,8 @@
 // Neutral Colors
-$pale-blue: hsl(243, 100%, 93%);
-$grayish-blue: hsl(229, 7%, 55%);
-$dark-blue: hsl(228, 56%, 26%);
-$very-dark-blue: hsl(229, 57%, 11%);
+$pale-blue: #dddbff;
+$grayish-blue: #848794;
+$dark-blue: #1d2c67;
+$very-dark-blue: #0c122c;
 
 // Primary Color
 $gradient-one: rgb(255, 163, 153);
